--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         .nav-link:after {
             content: " | ";
         }
+
+        footer{
+            height: 80px;
+        }
     </style>
 </head>
 
@@ -38,37 +42,90 @@
     </nav>
 
     <!-- container -->
-    <div class="row pl-3 mt-5">
+    <div class="row pl-3 pt-5 pb-5 bg-info">
         <div class="col-md">
             <div class="card" style="width: 50rem;">
                 <div class="card-body">
                     <h5 class="card-title text-primary"><strong>About Me</strong></h5>
                     <hr>
-                    <div class="row">
-                        <figure class="col-md-4">
-                            <img class="img-fluid" src="./assets/profile.jpg" alt="Profile picture">
-                        </figure>
-                        <div class="col-md-8">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                        </div>
-                    </div>
+                    <figure>
+                        <img class="img-fluid  float-left pr-3 pt-2" src="./assets/profile.jpg" alt="Profile picture">
+                    </figure>
+                    <content class="clearfix">
+
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                            of the Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                            Ipsum
+                            has been the industry's standard dummy text ever since the 1500s, when an unknown printer
+                            took a
+                            galley of type and scrambled it to make a type specimen book. It has survived not only five
+                            centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                            It
+                            was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
+                            passages, and more recently with desktop publishing software like Aldus PageMaker including
+                            versions of Lorem Ipsum. card's content.Lorem Ipsum is simply dummy text of the printing and
+                            typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the
+                            1500s, when an unknown printer took a galley of type and scrambled it to make a type
+                            specimen
+                            book. It has survived not only five centuries, but also the leap into electronic
+                            typesetting,
+                            remaining essentially unchanged. It was popularised in the 1960s with the release of
+                            Letraset
+                            sheets containing Lorem Ipsum passages, and more recently with desktop publishing software
+                            like
+                            Aldus PageMaker including versions of Lorem Ipsum.</p>
+
+                        <p>but also the leap into electronic typesetting, remaining essentially unchanged. It
+                            was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
+                            passages, and more recently with desktop publishing software like Aldus PageMaker including
+                            versions of Lorem Ipsum.</p>
+
+                        <ul>
+                            <li>Angular</li>
+                            <li>React</li>
+                            <li>NodeJs</li>
+                            <li>TypeScript</li>
+                            <li>JavaScript</li>
+                            <li>ES6</li>
+                            <li>HTML5</li>
+                            <li>SASS</li>
+                            <li>CSS3</li>
+                        </ul>
+
+                        <p>but also the leap into electronic typesetting, remaining essentially unchanged. It
+                            was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
+                            passages, and more recently with desktop publishing software like Aldus PageMaker including
+                            versions of Lorem Ipsum.</p>
+
+
+                    </content>
 
                 </div>
             </div>
         </div>
+    </div>
 
-        <!-- Optional JavaScript -->
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-            crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-            crossorigin="anonymous"></script>
+    <!--footer-->
+    <div class="row bg-secondary text-center">
+        <div class="col-md align-middle">
+            <footer>
+                &#64;Copyright
+            </footer>
+        </div>
+        
+    </div>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
