--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,21 @@
                   <h5 class="card-title text-info"><strong>Contact</strong></h5>
                   <hr>
                   <!-- form -->
-                  
+                  <form>
+                    <div class="form-group">
+                      <label for="exampleInputEmail1">Email address</label>
+                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="John Smith">
+                    </div>
+                    <div class="form-group">
+                      <label for="exampleInputPassword1">Password</label>
+                      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="example@gmail.com">
+                    </div>
+                    <div class="form-group">
+                      <label for="exampleFormControlTextarea1">Message</label>
+                      <textarea class="form-control" id="exampleFormControlTextarea1" rows="10"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-info">Submit</button>
+                  </form>
                   <!-- form end -->
               </div>
           </div>
