added background image to contact and portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,6 +20,10 @@
       height: 80px;
     }
 
+    .bg-img {
+      background-size: 100%;
+      background-image: url('https://image.freepik.com/free-photo/watercolor-splash-background_23-2148175602.jpg');
+    }
   </style>
 </head>
 
@@ -44,6 +48,16 @@
       </div>
     </div>
   </nav>
+
+  <!-- main content -->
+  <div class="container-fluid">
+    <div class="row pl-3 pt-5 pb-5 bg-img">
+      <div class="col-md">
+
+
+      </div>
+    </div>
+  </div>
 
 
   <!--footer-->
