--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,10 @@
       height: 80px;
     }
 
+    .bg-img {
+      background-size: 100%;
+      background-image: url('https://image.freepik.com/free-photo/watercolor-splash-background_23-2148175602.jpg');
+    }
   </style>
 </head>
 
@@ -45,36 +49,37 @@
   </nav>
 
 
-<!-- container -->
-<div class="container-fluid">
-  <div class="row pl-3 pt-5 pb-5 bg-img">
+  <!-- container -->
+  <div class="container-fluid">
+    <div class="row pl-3 pt-5 pb-5 bg-img">
       <div class="col-md">
-          <div class="card">
-              <div class="card-body">
-                  <h5 class="card-title text-info"><strong>Contact</strong></h5>
-                  <hr>
-                  <!-- form -->
-                  <form>
-                    <div class="form-group">
-                      <label for="exampleInputEmail1">Email address</label>
-                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="John Smith">
-                    </div>
-                    <div class="form-group">
-                      <label for="exampleInputPassword1">Password</label>
-                      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="example@gmail.com">
-                    </div>
-                    <div class="form-group">
-                      <label for="exampleFormControlTextarea1">Message</label>
-                      <textarea class="form-control" id="exampleFormControlTextarea1" rows="10"></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-info">Submit</button>
-                  </form>
-                  <!-- form end -->
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title text-info"><strong>Contact</strong></h5>
+            <hr>
+            <!-- form -->
+            <form>
+              <div class="form-group">
+                <label for="exampleInputEmail1">Email address</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                  placeholder="John Smith">
               </div>
+              <div class="form-group">
+                <label for="exampleInputPassword1">Password</label>
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="example@gmail.com">
+              </div>
+              <div class="form-group">
+                <label for="exampleFormControlTextarea1">Message</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="10"></textarea>
+              </div>
+              <button type="submit" class="btn btn-info">Submit</button>
+            </form>
+            <!-- form end -->
           </div>
+        </div>
       </div>
+    </div>
   </div>
-</div>
 
 
 
