added main content to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,10 @@
       background-size: 100%;
       background-image: url('https://image.freepik.com/free-photo/watercolor-splash-background_23-2148175602.jpg');
     }
+
+    .card{
+      max-width: 60%;
+    }
   </style>
 </head>
 
@@ -52,8 +56,97 @@
   <!-- main content -->
   <div class="container-fluid">
     <div class="row pl-3 pt-5 pb-5 bg-img">
-      <div class="col-md">
+      <div class="col-md mw-50">
 
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title text-info"><strong>Portfolio</strong></h5>
+            <hr>
+            <!--row 1-->
+            <div class="row">
+              <div class="col-md-6">
+                <!-- Card -->
+                <div class="card" style="max-width: 20rem;">
+                  <!-- Card image -->
+                  <img class="card-img-top" src="https://mdbootstrap.com/img/Mockups/Lightbox/Thumbnail/img%20(67).jpg"
+                    alt="Card image cap">
+                  <!-- Card content -->
+                  <div class="card-body text-white rgba-black-light p-2 bg-info">
+                    Web development
+                  </div>
+
+                </div>
+                <!-- Card -->
+              </div>
+              <div class="col-md-6">
+                <!-- Card -->
+                <div class="card" style="max-width: 20rem;">
+                  <!-- Card image -->
+                  <img class="card-img-top" src="https://mdbootstrap.com/img/Mockups/Lightbox/Thumbnail/img%20(67).jpg"
+                    alt="Card image cap">
+                  <!-- Card content -->
+                  <div class="card-body text-white rgba-black-light p-2 bg-info">
+                    Web development
+                  </div>
+                </div>
+                <!-- Card -->
+              </div>
+            </div>
+
+            <!--row 2-->
+            <div class="row pt-5">
+              <div class="col-md-6">
+                <!-- Card -->
+                <div class="card" style="max-width: 20rem;">
+                  <!-- Card image -->
+                  <img class="card-img-top" src="https://mdbootstrap.com/img/Mockups/Lightbox/Thumbnail/img%20(67).jpg"
+                    alt="Card image cap">
+                  <!-- Card content -->
+                  <div class="card-body text-white rgba-black-light p-2 bg-info">
+                    Web development
+                  </div>
+
+                </div>
+                <!-- Card -->
+              </div>
+              <div class="col-md-6">
+                <!-- Card -->
+                <div class="card" style="max-width: 20rem;">
+                  <!-- Card image -->
+                  <img class="card-img-top" src="https://mdbootstrap.com/img/Mockups/Lightbox/Thumbnail/img%20(67).jpg"
+                    alt="Card image cap">
+                  <!-- Card content -->
+                  <div class="card-body text-white rgba-black-light p-2 bg-info">
+                    Web development
+                  </div>
+                </div>
+                <!-- Card -->
+              </div>
+            </div>
+
+            <!--row 3-->
+            <div class="row pt-5">
+              <div class="col-md-6">
+                <!-- Card -->
+                <div class="card" style="max-width: 20rem;">
+                  <!-- Card image -->
+                  <img class="card-img-top" src="https://mdbootstrap.com/img/Mockups/Lightbox/Thumbnail/img%20(67).jpg"
+                    alt="Card image cap">
+                  <!-- Card content -->
+                  <div class="card-body text-white rgba-black-light p-2 bg-info">
+                    Web development
+                  </div>
+
+                </div>
+                <!-- Card -->
+              </div>
+              <div class="col-md-6">
+                <!-- empty content-->
+              </div>
+            </div>
+
+          </div>
+        </div>
 
       </div>
     </div>
