added navigation link in all pages

--- a/contact.html
+++ b/contact.html
@@ -40,9 +40,9 @@
 
     <div class="col-md-8 col-sm-12">
       <div class="row navbar-nav d-flex flex-row justify-content-end">
-        <a class="nav-item nav-link active px-2 text-sm-center text-md-right" href="#">About</a>
-        <a class="nav-item nav-link px-2 text-sm-center text-md-right" href="#">Portfolio</a>
-        <a class="nav-item nav-link px-2 text-sm-center text-md-right" href="#">Contact</a>
+        <a class="nav-item nav-link active px-2 text-sm-center text-md-right" href="./index.html">About</a>
+        <a class="nav-item nav-link px-2 text-sm-center text-md-right" href="./portfolio.html">Portfolio</a>
+        <a class="nav-item nav-link px-2 text-sm-center text-md-right" href="./contact.html">Contact</a>
 
       </div>
     </div>
