--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
         <div class="navbar-brand col-md-4 col-sm-12 mr-0 p-0">
             <div class="row">
                 <div class="col-md-1 col-sm-0"></div>
-                <div class="col-md-11 col-sm-12  text-white h-100 d-inline-block p-3 bg-info">Shambhawi Kumari</div>
+                <div class="col-md-11 col-sm-12 text-white h-100 d-inline-block p-3 bg-info text-sm-center">Shambhawi Kumari</div>
             </div>
 
         </div>
 
         <div class="col-md-8 col-sm-12">
-            <div class="row navbar-nav d-flex flex-row justify-content-end">
+            <div class="row navbar-nav d-flex flex-row justify-content-xs-center justify-content-sm-center justify-content-md-end">
                 <a class="nav-item nav-link active px-2 text-sm-center text-md-right" href="./index.html">About</a>
                 <a class="nav-item nav-link px-2 text-sm-center text-md-right" href="./portfolio.html">Portfolio</a>
                 <a class="nav-item nav-link px-2 text-sm-center text-md-right" href="./contact.html">Contact</a>
@@ -53,8 +53,8 @@
     <!-- container -->
     <div class="container-fluid">
         <div class="row pl-3 pt-5 pb-5 bg-img">
-            <div class="col-md">
-                <div class="card" style="width: 50rem;">
+            <div class="col-md mw-50">
+                <div class="card">
                     <div class="card-body">
                         <h5 class="card-title text-info"><strong>About Me</strong></h5>
                         <hr>
