--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
       background-image: url('https://image.freepik.com/free-photo/watercolor-splash-background_23-2148175602.jpg');
     }
 
-    .card{
+    .card {
       max-width: 60%;
     }
   </style>
@@ -38,13 +38,13 @@
     <div class="navbar-brand col-md-4 col-sm-12 mr-0 p-0">
       <div class="row">
         <div class="col-md-1 col-sm-0"></div>
-        <div class="col-md-11 col-sm-12  text-white h-100 d-inline-block p-3 bg-info">Shambhawi Kumari</div>
+        <div class="col-md-11 col-sm-12  text-white h-100 d-inline-block p-3 bg-info text-sm-center">Shambhawi Kumari</div>
       </div>
 
     </div>
 
     <div class="col-md-8 col-sm-12">
-      <div class="row navbar-nav d-flex flex-row justify-content-end">
+      <div class="row navbar-nav d-flex flex-row justify-content-xs-center justify-content-sm-center justify-content-md-end">
         <a class="nav-item nav-link active px-2 text-sm-center text-md-right" href="./index.html">About</a>
         <a class="nav-item nav-link px-2 text-sm-center text-md-right" href="./portfolio.html">Portfolio</a>
         <a class="nav-item nav-link px-2 text-sm-center text-md-right" href="./contact.html">Contact</a>
@@ -94,7 +94,7 @@
             </div>
 
             <!--row 2-->
-            <div class="row pt-5">
+            <div class="row pt-md-5 pt-sm-0">
               <div class="col-md-6">
                 <!-- Card -->
                 <div class="card" style="max-width: 20rem;">
@@ -125,7 +125,7 @@
             </div>
 
             <!--row 3-->
-            <div class="row pt-5">
+            <div class="row pt-md-5 pt-sm-0">
               <div class="col-md-6">
                 <!-- Card -->
                 <div class="card" style="max-width: 20rem;">
