--- a/contact.html
+++ b/contact.html
@@ -12,14 +12,6 @@
 
   <title>contact page</title>
   <style>
-    .nav-link:after {
-      content: " | ";
-    }
-
-    footer {
-      height: 80px;
-    }
-
     .bg-img {
       background-size: 100%;
       background-image: url('https://image.freepik.com/free-photo/watercolor-splash-background_23-2148175602.jpg');
@@ -29,30 +21,32 @@
 
 <body>
   <!-- nav bar -->
-  <nav class="row navbar sticky-top navbar-light bg-light py-0">
-    <div class="navbar-brand col-md-4 col-sm-12 mr-0 p-0">
-      <div class="row">
-        <div class="col-md-1 col-sm-0"></div>
-        <div class="col-md-11 col-sm-12  text-white h-100 d-inline-block p-3 bg-info text-sm-center">Shambhawi Kumari</div>
+  <div class="container-fluid">
+    <nav class="row navbar sticky-top navbar-light bg-light py-0">
+      <div class="navbar-brand col-md-4 col-sm-12 mr-0 py-0">
+        <div class="row">
+          <div class="col-md-12 col-sm-12  text-white h-100 d-inline-block p-3 bg-info text-sm-center">Shambhawi Kumari</div>
+        </div>
+  
       </div>
-
-    </div>
-
-    <div class="col-md-8 col-sm-12">
-      <div class="row navbar-nav d-flex flex-row justify-content-xs-center justify-content-sm-center justify-content-md-end">
-        <a class="nav-item nav-link active px-2 text-sm-center text-md-right" href="./index.html">About</a>
-        <a class="nav-item nav-link px-2 text-sm-center text-md-right" href="./portfolio.html">Portfolio</a>
-        <a class="nav-item nav-link px-2 text-sm-center text-md-right" href="./contact.html">Contact</a>
-
+  
+      <div class="col-md-8 col-sm-12">
+        <div class="row navbar-nav d-flex flex-row justify-content-xs-center justify-content-sm-center justify-content-md-end">
+          <a class="nav-item nav-link active px-2 text-sm-center text-md-right" href="./index.html">About &nbsp;|&nbsp;</a>
+          <a class="nav-item nav-link px-2 text-sm-center text-md-right" href="./portfolio.html">Portfolio &nbsp;|&nbsp;</a>
+          <a class="nav-item nav-link px-2 text-sm-center text-md-right" href="./contact.html">Contact</a>
+  
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
+  </div>
+  
 
 
   <!-- container -->
   <div class="container-fluid">
     <div class="row pl-3 pt-5 pb-5 bg-img">
-      <div class="col-md">
+      <div class="col-md pl-0">
         <div class="card">
           <div class="card-body">
             <h5 class="card-title text-info"><strong>Contact</strong></h5>
@@ -87,7 +81,7 @@
   <div class="container-fluid">
     <div class="row bg-secondary text-center">
       <div class="col-md align-middle">
-        <footer>
+        <footer class="py-3">
           &#64;Copyright
         </footer>
       </div>
