few styling and readme updated

--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
   <!-- container -->
   <div class="container-fluid">
     <div class="row pl-3 pt-5 pb-5 bg-img">
-      <div class="col-md pl-0">
+      <div class="col-md-8 col-sm-12 pl-0">
         <div class="card">
           <div class="card-body">
             <h5 class="card-title text-info"><strong>Contact</strong></h5>
@@ -72,6 +72,7 @@
           </div>
         </div>
       </div>
+      <div class="col-md-4 col-sm-12"></div>
     </div>
   </div>
 
