--- a/contact.html
+++ b/contact.html
@@ -80,6 +80,7 @@
 
   <!--footer-->
   <div class="container-fluid">
+    <div class="row bg-info py-1"></div>
     <div class="row bg-secondary text-center">
       <div class="col-md align-middle">
         <footer class="py-3">
