added materialize and front-end project skeleton

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,14 +9,8 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="style.css">
   <title>portfolio page</title>
-  <style>
-    .bg-img {
-      background-size: 100%;
-      background-image: url('https://image.freepik.com/free-photo/watercolor-splash-background_23-2148175602.jpg');
-    }
-  </style>
 </head>
 
 <body>
@@ -59,10 +53,10 @@
             <div class="row">
               <div class="col-md-6 py-2">
                 <!-- Card -->
-                <div class="card text-white">
-                  <img src="./assets/Images/web.jpg" class="card-img" alt="angular">
+                <div class="card text-white front-end">
+                  <img src="./assets/Images/Front-End-Development.jpg" class="card-img" alt="angular">
                   <div class="card-img-overlay h-100 d-flex flex-column justify-content-end p-0">
-                    <div class="card-title bg-info p-2">Web development</div>
+                    <div class="card-title bg-info p-2">Front-end Projects</div>
                   </div>
                 </div>
                 <!-- Card -->
@@ -111,8 +105,15 @@
                 </div>
                 <!-- Card -->
               </div>
-              <div class="col-md-6">
-                <!-- empty content-->
+              <div class="col-md-6 py-2">
+                <!-- Card -->
+                <div class="card text-white">
+                  <img src="./assets/Images/web.jpg" class="card-img" alt="angular">
+                  <div class="card-img-overlay h-100 d-flex flex-column justify-content-end p-0">
+                    <div class="card-title bg-info p-2">Web development</div>
+                  </div>
+                </div>
+                <!-- Card -->
               </div>
 
             </div>
@@ -148,6 +149,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
