added mobile screen side navbar

--- a/frontEnd.html
+++ b/frontEnd.html
@@ -45,7 +45,7 @@
                 <div class="divider"></div>
             </li>
             <li><a class="subheader">Info</a></li>
-            <li><a class="waves-effect waves-light btn social github"><i class="fa fa-github"></i> github</a></li>
+            <li><a class="waves-effect waves-light btn social github" href="https://github.com/shambhawi13/"><i class="fa fa-github"></i> github</a></li>
         </ul>
         <a href="#" data-target="slide-out" class="sidenav-trigger btn-floating pulse hide-on-med-and-up"><i class="material-icons small">menu</i></a>
     </header>
@@ -53,37 +53,45 @@
         <div class="container front-end-container">
             <div class="row">
                 <div class="col s12 m6">
-                    <div class="card">
+                    <div class="card card-animation">
                         <div class="card-image waves-effect waves-block waves-light">
                             <img class="activator" src="./assets/Images/shoppinator.png">
                         </div>
                         <div class="card-content">
                             <span class="card-title activator grey-text text-darken-4">Shoppinator<i
                                     class="material-icons right">more_vert</i></span>
-                            <p><a href="#"><i class="fa fa-github"></i>Github</a></p>
+                            <p><a href="https://github.com/shambhawi13/Shoppinator" target="_blank"><i class="fa fa-github"></i>Github</a></p>
                         </div>
                         <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">Shoppinator<i
                                     class="material-icons right">close</i></span>
-                            <p>Here is some more information about this product that is only revealed once clicked on.
+                            <p>Shoppinator simplifies the search experience and creates a one-stop location for everything.<br>
+                                - Instead of searching each item and tracking on personal notes, Shoppinator creates a platform to help users to just give the link to the image of his choice. eg: a workplace/livingspace and we will take care of processing the image and suggesting users of different items that he would like to buy. <br>
+                                - Users need not track and search items one by one. <br>
+                                - It provides detail on both online purchase as well as nearby stores based on the user's choice.
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="col s12 m6">
-                    <div class="card">
+                    <div class="card card-animation">
                         <div class="card-image waves-effect waves-block waves-light">
                             <img class="activator" src="./assets/Images/weather-image.png">
                         </div>
                         <div class="card-content">
                             <span class="card-title activator grey-text text-darken-4">Weather Dashboard<i
                                     class="material-icons right">more_vert</i></span>
-                            <p><a href="#"><i class="fa fa-github"></i>Github</a></p>
+                            <p><a href="https://github.com/shambhawi13/Weather-Dashboard" target="_blank"><i class="fa fa-github"></i>Github</a></p>
                         </div>
                         <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">Weather Dashboard<i
                                     class="material-icons right">close</i></span>
-                            <p>Here is some more information about this product that is only revealed once clicked on.
+                            <p>As a user, I can visit this application to view wheather report of selected cities. I can get the following details: <br>
+
+                                - Retrieve priviously saved weather details of the cities I have searched. It uses localStorage behind the scene to keep record of cities. <br>
+                                - Used OpenWeather API to retrieve weather data. <br>
+                                - I can get forecast of next 5 days. <br>
+                                - Multiple cities can be searched.
                             </p>
                         </div>
                     </div>
@@ -92,14 +100,14 @@
             </div>
             <div class="row">
                 <div class="col s12 m6">
-                    <div class="card">
+                    <div class="card card-animation">
                         <div class="card-image waves-effect waves-block waves-light">
                             <img class="activator" src="./assets/Images/quiz.jpg">
                         </div>
                         <div class="card-content">
                             <span class="card-title activator grey-text text-darken-4">JS Quiz Game<i
                                     class="material-icons right">more_vert</i></span>
-                            <p><a href="#"><i class="fa fa-github"></i>Github</a></p>
+                            <p><a href="https://github.com/shambhawi13/quiz-game" target="_blank"><i class="fa fa-github"></i>Github</a></p>
                         </div>
                         <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">JS Quiz Game<i
