stylings to header change

--- a/frontEnd.html
+++ b/frontEnd.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 
-<body>
+<body class="bg-img">
 
     <header>
         <nav class="hide-on-med-and-down teal darken-2">
@@ -47,9 +47,9 @@
             <li><a class="subheader">Info</a></li>
             <li><a class="waves-effect waves-light btn social github" href="https://github.com/shambhawi13/"><i class="fa fa-github"></i> github</a></li>
         </ul>
-        <a href="#" data-target="slide-out" class="sidenav-trigger btn-floating pulse hide-on-med-and-up"><i class="material-icons small">menu</i></a>
+        <a href="#" data-target="slide-out" class="sidenav-trigger btn-floating pulse hide-on-large-only"><i class="material-icons small">menu</i></a>
     </header>
-    <main class="bg-img">
+    <main>
         <div class="container front-end-container">
             <div class="row">
                 <div class="col s12 m6">
@@ -58,9 +58,9 @@
                             <img class="activator" src="./assets/Images/shoppinator.png">
                         </div>
                         <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Shoppinator<i
+                            <span class="card-title activator teal-text text-darken-4"><strong>Shoppinator</strong> <i
                                     class="material-icons right">more_vert</i></span>
-                            <p><a href="https://github.com/shambhawi13/Shoppinator" target="_blank"><i class="fa fa-github"></i>Github</a></p>
+                            <p><a href="https://github.com/shambhawi13/Shoppinator" target="_blank" class="black-text"><i class="fa fa-github"></i>Github</a></p>
                         </div>
                         <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">Shoppinator<i
@@ -79,9 +79,9 @@
                             <img class="activator" src="./assets/Images/weather-image.png">
                         </div>
                         <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Weather Dashboard<i
+                            <span class="card-title activator teal-text text-darken-4"><strong> Weather Dashboard</strong><i
                                     class="material-icons right">more_vert</i></span>
-                            <p><a href="https://github.com/shambhawi13/Weather-Dashboard" target="_blank"><i class="fa fa-github"></i>Github</a></p>
+                            <p><a href="https://github.com/shambhawi13/Weather-Dashboard" target="_blank" class="black-text"><i class="fa fa-github"></i>Github</a></p>
                         </div>
                         <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">Weather Dashboard<i
@@ -105,9 +105,9 @@
                             <img class="activator" src="./assets/Images/quiz.jpg">
                         </div>
                         <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">JS Quiz Game<i
+                            <span class="card-title activator teal-text text-darken-4"><strong>JS Quiz Game</strong><i
                                     class="material-icons right">more_vert</i></span>
-                            <p><a href="https://github.com/shambhawi13/quiz-game" target="_blank"><i class="fa fa-github"></i>Github</a></p>
+                            <p><a href="https://github.com/shambhawi13/quiz-game" target="_blank" class="black-text"><i class="fa fa-github"></i>Github</a></p>
                         </div>
                         <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">JS Quiz Game<i
