--- a/index.html
+++ b/index.html
@@ -13,14 +13,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Fondamento:ital@1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>index page</title>
-
-    <style>
-        .bg-img {
-            background-size: 100%;
-            background-image: url('https://image.freepik.com/free-photo/watercolor-splash-background_23-2148175602.jpg');
-        }
-    </style>
 </head>
 
 <body class="bg-img">
@@ -60,7 +54,7 @@
             <li><a class="waves-effect waves-light btn social github" href="https://github.com/shambhawi13/"><i
                         class="fa fa-github"></i> github</a></li>
         </ul>
-        <a href="#" data-target="slide-out" class="sidenav-trigger btn-floating pulse hide-on-med-and-up"><i
+        <a href="#" data-target="slide-out" class="sidenav-trigger btn-floating pulse hide-on-large-only"><i
                 class="material-icons small">menu</i></a>
     </header>
 
@@ -70,7 +64,7 @@
             <div class="col-md-8 col-sm-12 mw-50 pl-0">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title text-info"><strong>About Me</strong></h5>
+                        <h5 class="card-title teal-text"><strong>About Me</strong></h5>
                         <hr>
                         <figure>
                             <img class="img-fluid  float-left pr-3 pt-2" src="./assets/profile.jpg"
@@ -146,6 +140,7 @@
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
