--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
       <li><a class="waves-effect waves-light btn social github" href="https://github.com/shambhawi13/"><i
             class="fa fa-github"></i> github</a></li>
     </ul>
-    <a href="#" data-target="slide-out" class="sidenav-trigger btn-floating pulse hide-on-med-and-up"><i
+    <a href="#" data-target="slide-out" class="sidenav-trigger btn-floating pulse hide-on-large-only"><i
         class="material-icons small">menu</i></a>
   </header>
 
