--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Fondamento:ital@1&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
   <title>contact page</title>
 </head>
 
@@ -52,7 +53,7 @@
       <li><a class="waves-effect waves-light btn social github" href="https://github.com/shambhawi13/"><i
             class="fa fa-github"></i> github</a></li>
     </ul>
-    <a href="#" data-target="slide-out" class="sidenav-trigger btn-floating pulse hide-on-med-and-up"><i
+    <a href="#" data-target="slide-out" class="sidenav-trigger btn-floating pulse hide-on-large-only"><i
         class="material-icons small">menu</i></a>
   </header>
 
@@ -64,7 +65,7 @@
       <div class="col-md-8 col-sm-12 pl-0">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title text-info"><strong>Contact</strong></h5>
+            <h5 class="card-title teal-text"><strong>Contact</strong></h5>
             <hr>
             <!-- form -->
             <form>
@@ -117,6 +118,7 @@
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
